fixed order review z-index

--- a/inc/woocommerce/css/woocommerce.scss
+++ b/inc/woocommerce/css/woocommerce.scss
@@ -897,6 +897,7 @@ form.checkout {
 	.payment-fixed {
 		position: fixed;
 		top: 0;
+		z-index: 999;
 	}
 }
 
